@@ -4,27 +4,16 @@
     <parent>
         <groupId>fr.ght1pc9kc</groupId>
         <artifactId>entity</artifactId>
-        <version>1.3.3</version>
+        <version>1.5.0</version>
     </parent>
 
     <name>Entity for GraphQL</name>
     <artifactId>entity-graphql</artifactId>
 
-    <properties>
-        <surefire.argline.opens>
-            --add-opens fr.ght1pc9kc.entity.graphql/fr.ght1pc9kc.entity.graphql=com.fasterxml.jackson.databind
-        </surefire.argline.opens>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>fr.ght1pc9kc</groupId>
             <artifactId>entity-api</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>fr.ght1pc9kc</groupId>
-            <artifactId>entity-jackson</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -49,11 +38,6 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
